--- a/localnet/kubernetes/values-relayminer-3.yaml
+++ b/localnet/kubernetes/values-relayminer-3.yaml
@@ -1,4 +1,8 @@
 config:
+  # TODO_TECHDEBT(@okdas): remove `signing_key_name` - which is currently present
+  # for backwards-compatibity with the current helm-chart.
+  signing_key_name: supplier3
+
   default_signing_key_names: [supplier3]
   suppliers:
     - service_id: anvil
