--- a/config.yml
+++ b/config.yml
@@ -141,9 +141,11 @@ genesis:
             - service:
                 id: anvil
                 name: ""
+                compute_units_per_relay: 1
             - service:
                 id: ollama
                 name: ""
+                compute_units_per_relay: 1
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
