--- a/config.yml
+++ b/config.yml
@@ -87,9 +87,21 @@ validators:
 # We can persist arbitrary genesis values via 1 to 1 mapping to genesis.json
 genesis:
   app_state:
+    # https://docs.cosmos.network/main/build/modules/mint
     mint:
       params:
         mint_denom: upokt
+        # Note that in Pocket Network, the majority of the inflation/deflation
+        # comes from the utility of network, not just the validators that
+        # secure it. Therefore, the inflation params of x/mint are set to 0.
+        # See x/tokenomics for all details related to token inflation.
+        inflation_rate_change: "0.0"
+        inflation_max: "0.0"
+        inflation_min: "0.0"
+        # These parameters are included for posterity but commented out for clarity
+        # goal_bonded: "NA"
+        # blocks_per_year: "NA"
+        # max_supply: "NA"
     staking:
       params:
         bond_denom: upokt
