--- a/config.yml
+++ b/config.yml
@@ -160,6 +160,7 @@ genesis:
                   rpc_type: JSON_RPC
                   url: http://relayminer1:8545
               service:
+                compute_units_per_relay: 1
                 id: anvil
                 name: ""
             - endpoints:
@@ -167,6 +168,7 @@ genesis:
                   rpc_type: REST
                   url: http://relayminer1:8545
               service:
+                compute_units_per_relay: 1
                 id: ollama
                 name: ""
           stake:
