--- a/config.yml
+++ b/config.yml
@@ -146,6 +146,10 @@ genesis:
                 id: ollama
                 name: ""
                 compute_units_per_relay: 1
+            - service:
+                id: rest
+                name: ""
+                compute_units_per_relay: 1
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
@@ -162,6 +166,14 @@ genesis:
               service:
                 compute_units_per_relay: 1
                 id: anvil
+                name: ""
+            - endpoints:
+                - configs: []
+                  rpc_type: REST
+                  url: http://relayminer1:8545
+              service:
+                compute_units_per_relay: 1
+                id: rest
                 name: ""
             - endpoints:
                 - configs: []
