--- a/localnet/kubernetes/values-relayminer-1.yaml
+++ b/localnet/kubernetes/values-relayminer-1.yaml
@@ -17,3 +17,9 @@ config:
         backend_url: http://ollama:11434/
         publicly_exposed_endpoints:
           - relayminer1
+    - service_id: rest
+      listen_url: http://0.0.0.0:8545
+      service_config:
+        backend_url: http://localhost:10000/
+        publicly_exposed_endpoints:
+          - relayminer1
