--- a/localnet/poktrolld/config/supplier1_stake_config.yaml
+++ b/localnet/poktrolld/config/supplier1_stake_config.yaml
@@ -1,6 +1,13 @@
+owner_address: pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
 # NB: The stake amount is exactly 1upokt greater than the value in genesis.json
 # so that the stake command causes a state change.
 stake_amount: 1000069upokt
+# If default_rev_share_percent is omitted, the owner receives 100% of the rewards.
+# default_rev_share_percent cannot be empty - it must either be omitted completely
+# or include at least one item.
+default_rev_share_percent:
+  # The sum of all shares must equal 100%. Staking will fail otherwise.
+  - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4: 100
 services:
   # The endpoint URL for the Anvil service is provided via the RelayMiner.
   # The RelayMiner acts as a proxy, forwarding requests to the actual Anvil data node behind it.
@@ -10,6 +17,12 @@ services:
       - publicly_exposed_url: http://relayminer1:8545
         rpc_type: JSON_RPC
   - service_id: ollama
+    # Service specific ref share, if rev_share_percent is omitted for a specific
+    # service, default_rev_share_percent is used.
+    # The sum of all shares must equal 100%. Staking will fail otherwise.
+    rev_share_percent:
+      - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4: 50
+      - pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw: 50
     endpoints:
       - publicly_exposed_url: http://relayminer1:8545
         rpc_type: REST
