--- a/config.yml
+++ b/config.yml
@@ -169,7 +169,8 @@ genesis:
             denom: upokt
     supplier:
       supplierList:
-        - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
+        - owner_address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
+          address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
           services:
             - service:
                 id: anvil
