--- a/config.yml
+++ b/config.yml
@@ -178,12 +178,18 @@ genesis:
                 - configs: []
                   rpc_type: JSON_RPC
                   url: http://relayminer1:8545
+              rev_share:
+                - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
+                  rev_share_percentage: "100"
             - service:
                 id: ollama
               endpoints:
                 - configs: []
                   rpc_type: REST
                   url: http://relayminer1:8545
+              rev_share:
+                - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
+                  rev_share_percentage: "100"
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `application1_stake_config.yaml` so that the stake command causes a state change.
