feat(relayminer): add `proxy.Ping(...)` capability to test connectivity between relay servers and backend URLs (#1)
* relayer: add RelayServers() method to RelayProxy interface; Add Ping(), ServiceIDs(), Forward() method to RelayServer interface; add RelayServers slice with helper method byServiceID

* relayer: add forward config entry

* relayer: implement ServiceIDs, Forward, and Ping method for synchrounous RPC server

* relayer: add RelayServers implementation for RelayProxy

* relayer: add Ping and Forward options

* relayer: integrate ping option

* relayer: add ServePing and ServeForward method to RelayMiner

* test proxy.Ping() in test + remove forward feature

* add serve ping test

* add doc

--- a/localnet/poktrolld/config/relayminer_config_full_example.yaml
+++ b/localnet/poktrolld/config/relayminer_config_full_example.yaml
@@ -18,6 +18,12 @@ pprof:
   enabled: false
   addr: localhost:6060
 
+# Ping server configuration to test the connectivity of every
+# suppliers.[].service_config.backend_url
+ping:
+  enabled: false
+  addr: localhost:8081
+
 pocket_node:
   # Pocket node URL exposing the CometBFT JSON-RPC API.
   # Used by the Cosmos client SDK, event subscriptions, etc.
