[Performance] Reduce RelayMiner memory consumption under load (#739)
## Summary

## Issue

- #551 
- #621 

## Type of change

Select one or more:

- [ ] New feature, functionality or library
- [ ] Bug fix
- [x] Code health or cleanup
- [ ] Documentation
- [ ] Other (specify)

## Testing

**Documentation changes** (only if making doc changes)
- [ ] `make docusaurus_start`; only needed if you make doc changes

**Local Testing** (only if making code changes)
- [ ] **Unit Tests**: `make go_develop_and_test`
- [ ] **LocalNet E2E Tests**: `make test_e2e`
- See [quickstart
guide](https://dev.poktroll.com/developer_guide/quickstart) for
instructions

**PR Testing** (only if making code changes)
- [ ] **DevNet E2E Tests**: Add the `devnet-test-e2e` label to the PR.
- **THIS IS VERY EXPENSIVE**, so only do it after all the reviews are
complete.
- Optionally run `make trigger_ci` if you want to re-trigger tests
without any code changes
- If tests fail, try re-running failed tests only using the GitHub UI as
shown
[here](https://github.com/pokt-network/poktroll/assets/1892194/607984e9-0615-4569-9452-4c730190c1d2)


## Sanity Checklist

- [ ] I have tested my changes using the available tooling
- [ ] I have commented my code
- [ ] I have performed a self-review of my own code; both comments &
source code
- [ ] I create and reference any new tickets, if applicable
- [ ] I have left TODOs throughout the codebase, if applicable

---------

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Bryan White <bryanchriswhite@gmail.com>

--- a/load-testing/loadtest_manifest_localnet_single_supplier.yaml
+++ b/load-testing/loadtest_manifest_localnet_single_supplier.yaml
@@ -17,23 +17,15 @@ funding_account_address: pokt1awtlw5sjmw2f5lgj8ekdkaqezphgz88rdk93sk # address f
 # When running on **LocalNet**, the number of the suppliers defined below should match
 # the `relayminers.count` in your `localnet_config.yaml`.
 suppliers:
-  # The supplier operator address that is available in the load test's environment
-  # keyring, used to identify the supplier and sign relays and transactions with.
-  # It must be the operator address corresponding to the provided signing_key_name
-  # in the `relay_miner_config.yaml` file.
+  # The supplier address that is available in the load test's environment keyring,
+  # used to identify the supplier and sign relays and transactions with.
+  # It must be the address corresponding to the provided signing_key_name in the
+  # `relay_miner_config.yaml` file.
 
   # RelayMiner 1; http://localhost:10350/r/relayminer1/overview
   - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
     # The advertised URL used by the supplier when it submits a stake message on-chain.
     exposed_url: http://relayminer1:8545
-
-  # RelayMiner 2; http://localhost:10350/r/relayminer2/overview
-  - address: pokt1re27pw4llwnatx4sq7rlggqzcm6j3f39epq2wa
-    exposed_url: http://relayminer2:8545
-
-  # RelayMiner 3; http://localhost:10350/r/relayminer3/overview
-  - address: pokt1j6dun0x8eyq5mmsmq83zs3c2utt85q8478c89u
-    exposed_url: http://relayminer3:8545
 
 # List of pre-provisioned gateways used for load testing.
 # These gateways will be progressively staked and delegated to during the load test.
@@ -48,7 +40,7 @@ gateways:
 
   # Gateway 1; http://localhost:10350/r/gateway1/overview
   - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
-    exposed_url: http://localhost:42079 # The url used to send relays to the gateway on.
+    exposed_url: http://localhost:42079 # The gateway url that the user sends relays to (e.g. curl)
 
   # Gateway 2; http://localhost:10350/r/gateway2/overview
   - address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz
