--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,10 @@ accounts:
     mnemonic: "involve clean slab term real human green immune valid swing protect talk silent unique cart few ice era right thunder again drop among bounce"
     coins:
       - 300000000upokt
+  - name: apptiny
+    mnemonic: "worry pupil rival such jump pitch flame prosper tattoo eternal round receive cube crowd remove afraid garment brand toy nut guitar toy sausage fragile"
+    coins:
+      - 1000000upokt # 1 POKT
   - name: supplier1
     mnemonic: "cool industry busy tumble funny relax error state height like board wing goat emerge visual idle never unveil announce hill primary okay spatial frog"
     coins:
@@ -156,6 +160,20 @@ genesis:
         max_delegated_gateways: "7"
       applicationList:
         - address: pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
+          delegatee_gateway_addresses: []
+          service_configs:
+            - service:
+                id: anvil
+            - service:
+                id: rest
+            - service:
+                id: ollama
+          stake:
+            # NB: This value should be exactly 1upokt smaller than the value in
+            # `supplier1_stake_config.yaml` so that the stake command causes a state change.
+            amount: "1000068"
+            denom: upokt
+        - address: pokt1ad28jdap2zfanjd7hpkh984yveney6k9a42man
           delegatee_gateway_addresses: []
           service_configs:
             - service:
