--- a/load-testing/loadtest_manifest_example.yaml
+++ b/load-testing/loadtest_manifest_example.yaml
@@ -4,20 +4,24 @@ is_ephemeral_chain: false
 
 # testnet_node is the URL of the node that the load test will use to query the
 # chain and submit transactions.
-testnet_node: https://devnet-sophon-validator-rpc.poktroll.com
+testnet_node: https://testnet-validated-validator-rpc.poktroll.com
 
 # The service ID to request relays from.
-service_id: "anvil"
+service_id: "protocol-anvil"
 
 # The address of the account that will be used to fund the the application accounts
 # so that they can stake on the network.
-funding_account_address: pokt1awtlw5sjmw2f5lgj8ekdkaqezphgz88rdk93sk # address for faucet account
+funding_account_address: pokt1v3mcrj0h2zfekyf2n8m369x4v9wfvdm34hecd9 # address for faucet account
 
 # In non-ephemeral chains, the gateways are identified by their address.
 gateways:
-  - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
-    exposed_url: https://devnet-sophon-gateway-1.poktroll.com
-  - address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz
-    exposed_url: https://devnet-sophon-gateway-2.poktroll.com
-  - address: pokt1zhmkkd0rh788mc9prfq0m2h88t9ge0j83gnxya
-    exposed_url: https://devnet-sophon-gateway-3.poktroll.com
+  - address: pokt18anvrjyxvh2mc3agmxxhd047yna6ccfy2y97cs
+    exposed_url: https://testnet-gateway-1.poktroll.com
+  - address: pokt1gdwgchpz56uyr2m2g29gvuu3lc8fe3649ew2am
+    exposed_url: https://testnet-gateway-2.poktroll.com
+  - address: pokt1mm0xn9kxu789las3d4ehfndq3vudnujpdmkpjl
+    exposed_url: https://testnet-gateway-3.poktroll.com
+  - address: pokt13an9w8plrpvf0vq2jywcc4xc5ggz3tkhmlj4uq
+    exposed_url: https://testnet-gateway-4.poktroll.com
+  - address: pokt1y0pawkkgd8659n2mq6r80pgu50xkuzn5s62nfj
+    exposed_url: https://testnet-gateway-5.poktroll.com
