--- a/localnet/poktrolld/config/supplier_stake_config_example.yaml
+++ b/localnet/poktrolld/config/supplier_stake_config_example.yaml
@@ -5,7 +5,7 @@
 #   the Supplier).
 # * Non-custodial staking is an advanced mechanism, where the owner address is different from
 #   the operator address. This is useful to avoid overuse of the private key of the
-#   account that owns the staked funds or receives the rewards.
+#   account that owns the staked funds and receives the rewards.
 
 # The address of the supplier's owner. This address could stake a new Supplier or
 # update any of its properties excluding the operator address which is immutable.
@@ -19,17 +19,17 @@ owner_address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
 # This address can also used to stake a new Supplier or unstake an existing one.
 # It uniquely identifies the Supplier in the Pocket Network and cannot be changed
 # once the Supplier is created.
-# The operator address is optional; if not provided, the owner address is used as
-# the operator address.
+# The operator address is optional; if it is empty or not provided, the owner
+# address is used as the operator address.
 operator_address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
 # NB: The stake amount is exactly 1upokt greater than the value in genesis.json
 # so that the stake command causes a state change.
 stake_amount: 1000069upokt
 # If default_rev_share_percent is omitted, the owner receives 100% of the rewards.
-# default_rev_share_percent cannot be empty - it must either be omitted completely
+# default_rev_share_percent cannot be empty - it MUST either be omitted completely
 # or include at least one item.
 default_rev_share_percent:
-  # The sum of all shares must equal 100%. Staking will fail otherwise.
+  # The sum of all shares MUST equal 100%. Staking will fail otherwise.
   - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4: 80.5
   - pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw: 19.5
 services:
@@ -43,7 +43,7 @@ services:
   - service_id: ollama
     # Service specific rev share, if rev_share_percent is omitted for a specific
     # service, default_rev_share_percent is used.
-    # The sum of all shares must equal 100%. Staking will fail otherwise.
+    # The sum of all shares MUST equal 100%. Staking will fail otherwise.
     rev_share_percent:
       - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4: 50
       - pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw: 50
