[Docs] Document (non-)custodial staking (#720)
## Summary

Follow-up to #716 to document custodial and non-custodial staking
configuration.

## Issue


![image](https://github.com/user-attachments/assets/671278e9-911f-43d9-b7eb-e7994b959b72)

- #493

## Type of change

Select one or more:

- [ ] New feature, functionality or library
- [ ] Bug fix
- [ ] Code health or cleanup
- [x] Documentation
- [ ] Other (specify)

## Testing

**Documentation changes** (only if making doc changes)
- [x] `make docusaurus_start`; only needed if you make doc changes

**Local Testing** (only if making code changes)
- [ ] **Unit Tests**: `make go_develop_and_test`
- [ ] **LocalNet E2E Tests**: `make test_e2e`
- See [quickstart
guide](https://dev.poktroll.com/developer_guide/quickstart) for
instructions

**PR Testing** (only if making code changes)
- [ ] **DevNet E2E Tests**: Add the `devnet-test-e2e` label to the PR.
- **THIS IS VERY EXPENSIVE**, so only do it after all the reviews are
complete.
- Optionally run `make trigger_ci` if you want to re-trigger tests
without any code changes
- If tests fail, try re-running failed tests only using the GitHub UI as
shown
[here](https://github.com/pokt-network/poktroll/assets/1892194/607984e9-0615-4569-9452-4c730190c1d2)


## Sanity Checklist

- [ ] I have tested my changes using the available tooling
- [ ] I have commented my code
- [ ] I have performed a self-review of my own code; both comments &
source code
- [ ] I create and reference any new tickets, if applicable
- [ ] I have left TODOs throughout the codebase, if applicable


<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Enhanced command for supplier unstake, improving usability and
flexibility.
- Introduced new sections in documentation for "Staking types,"
detailing Custodial and Non-Custodial Staking.

- **Documentation**
- Expanded configurati

--- a/localnet/poktrolld/config/supplier2_stake_config.yaml
+++ b/localnet/poktrolld/config/supplier2_stake_config.yaml
@@ -1,10 +1,9 @@
+owner_address: pokt1re27pw4llwnatx4sq7rlggqzcm6j3f39epq2wa
+operator_address: pokt1re27pw4llwnatx4sq7rlggqzcm6j3f39epq2wa
 stake_amount: 1000070upokt
 services:
   - service_id: anvil
     endpoints:
-      # The endpoint URL for the Anvil service is provided via the RelayMiner.
-      # The RelayMiner acts as a proxy, forwarding requests to the actual Anvil data node behind it.
-      # This setup allows for flexible and dynamic service provisioning within the network.
       - publicly_exposed_url: http://relayminer2:8545
         rpc_type: JSON_RPC
   - service_id: ollama
