--- a/localnet/poktrolld/config/supplier3_stake_config.yaml
+++ b/localnet/poktrolld/config/supplier3_stake_config.yaml
@@ -1,10 +1,9 @@
+owner_address: pokt1j6dun0x8eyq5mmsmq83zs3c2utt85q8478c89u
+operator_address: pokt1j6dun0x8eyq5mmsmq83zs3c2utt85q8478c89u
 stake_amount: 1000071upokt
 services:
   - service_id: anvil
     endpoints:
-      # The endpoint URL for the Anvil service is provided via the RelayMiner.
-      # The RelayMiner acts as a proxy, forwarding requests to the actual Anvil data node behind it.
-      # This setup allows for flexible and dynamic service provisioning within the network.
       - publicly_exposed_url: http://relayminer3:8545
         rpc_type: JSON_RPC
   - service_id: ollama
