--- a/load-testing/loadtest_manifest_example.yaml
+++ b/load-testing/loadtest_manifest_example.yaml
@@ -9,7 +9,7 @@ testnet_node: https://devnet-sophon-validator-rpc.poktroll.com
 # The service ID to request relays from.
 service_id: "anvil"
 
-# The address of the account that will be used to fund the the application accounts
+# The address of the account that will be used to fund the application accounts
 # so that they can stake on the network.
 funding_account_address: pokt1awtlw5sjmw2f5lgj8ekdkaqezphgz88rdk93sk # address for faucet account
 
