--- a/load-testing/loadtest_manifest_localnet_single_supplier.yaml
+++ b/load-testing/loadtest_manifest_localnet_single_supplier.yaml
@@ -6,7 +6,7 @@ is_ephemeral_chain: true # This should be `true` for LocalNet as it is an epheme
 # The service ID to use for the load test.
 service_id: anvil
 
-# The address of the account that will be used to fund the the application,
+# The address of the account that will be used to fund the application,
 # gateway and supplier accounts so that they can stake on the network.
 funding_account_address: pokt1awtlw5sjmw2f5lgj8ekdkaqezphgz88rdk93sk # address for faucet account
 
