--- a/localnet/poktrolld/config/app.toml
+++ b/localnet/poktrolld/config/app.toml
@@ -7,7 +7,7 @@ index-events = []
 inter-block-cache = true
 min-retain-blocks = 0
 minimum-gas-prices = "0upokt"
-pruning = "default"
+pruning = "nothing"
 pruning-interval = "0"
 pruning-keep-recent = "0"
 query-gas-limit = "0"
@@ -32,7 +32,7 @@ query-gas-limit = "0"
   enable = true
 
 [mempool]
-  max-txs = -1
+  max-txs = 10000
 
 [rpc]
   cors_allowed_origins = ["*"]
@@ -55,7 +55,7 @@ query-gas-limit = "0"
   enable-service-label = false
   enabled = true
   global-labels = []
-  metrics-sink = ""
+  metrics-sink = "mem"
   prometheus-retention-time = "600"
   service-name = ""
   statsd-addr = ""
