fix: Tests failing due to merge

--- a/config.yml
+++ b/config.yml
@@ -158,12 +158,9 @@ genesis:
         - address: pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
           delegatee_gateway_addresses: []
           service_configs:
-            - service:
-                id: anvil
-            - service:
-                id: rest
-            - service:
-                id: ollama
+            - service_id: anvil
+            - service_id: rest
+            - service_id: ollama
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
@@ -174,8 +171,7 @@ genesis:
         - owner_address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
           operator_address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
           services:
-            - service:
-                id: anvil
+            - service_id: anvil
               endpoints:
                 - configs: []
                   rpc_type: JSON_RPC
@@ -183,8 +179,7 @@ genesis:
               rev_share:
                 - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
                   rev_share_percentage: "100"
-            - service:
-                id: rest
+            - service_id: rest
               endpoints:
                 - configs: []
                   rpc_type: REST
@@ -192,8 +187,7 @@ genesis:
               rev_share:
                 - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
                   rev_share_percentage: "100"
-            - service:
-                id: ollama
+            - service_id: ollama
               endpoints:
                 - configs: []
                   rpc_type: REST
