[Quick PR][LocalNet] Turn off minimum-gas-prices (#805)
## Summary

`minimum-gas-prices` was increased to `0.000000001upokt` on LocalNet. We
are not ready for that yet. #794 will address the default fees values,
so all existing documentation and processes will continue working with
non-zero gas prices.

---------

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>

--- a/config.yml
+++ b/config.yml
@@ -83,7 +83,8 @@ validators:
     app:
       # DEV_NOTE: Ignite does not carry over all defaults, so we are going to match `minimum-gas-prices` with `cmd/config.go`.
       # See the enhancement request here: https://github.com/ignite/cli/issues/4340
-      minimum-gas-prices: 0.000000001upokt
+      # TODO(#794): turn on `minimum-gas-prices` back
+      # minimum-gas-prices: 0.000000001upokt
       telemetry:
         enabled: true
         prometheus-retention-time: "600" # seconds
