--- a/config.yml
+++ b/config.yml
@@ -180,12 +180,9 @@ genesis:
         - address: pokt1ad28jdap2zfanjd7hpkh984yveney6k9a42man
           delegatee_gateway_addresses: []
           service_configs:
-            - service:
-                id: anvil
-            - service:
-                id: rest
-            - service:
-                id: ollama
+            - service_id: anvil
+            - service_id: rest
+            - service_id: ollama
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
