chore: sync shared module default params

--- a/config.yml
+++ b/config.yml
@@ -268,3 +268,6 @@ genesis:
         claim_window_close_offset_blocks: 4
         proof_window_open_offset_blocks: 0
         proof_window_close_offset_blocks: 4
+        supplier_unbonding_period_sessions: 1
+        application_unbonding_period_sessions: 1
+        compute_units_to_tokens_multiplier: 42
