--- a/config.yml
+++ b/config.yml
@@ -224,7 +224,7 @@ genesis:
             denom: upokt
     gateway:
       params:
-        # TODO_MAINNER: Determine realistic amount for minimum gateway stake amount.
+        # TODO_MAINNET: Determine realistic amount for minimum gateway stake amount.
         min_stake: 100
       gatewayList:
         - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
