TODO: figure out why prometheus doesn't scrape anymore

--- a/localnet/kubernetes/observability-prometheus-stack.yaml
+++ b/localnet/kubernetes/observability-prometheus-stack.yaml
@@ -20,4 +20,15 @@ grafana:
 
 prometheus:
   prometheusSpec:
+    # podMonitorNamespaceSelector:
+    #   any: true
+    # podMonitorSelector: {}
+    # podMonitorSelectorNilUsesHelmValues: false
+    # ruleNamespaceSelector:
+    #   any: true
+    # ruleSelector: {}
+    # ruleSelectorNilUsesHelmValues: false
+    # serviceMonitorNamespaceSelector:
+    #   any: true
+    # serviceMonitorSelector: {}
     serviceMonitorSelectorNilUsesHelmValues: false
