chore: add default application min_stake param of 1 POKT to genesis config

--- a/config.yml
+++ b/config.yml
@@ -165,6 +165,10 @@ genesis:
     application:
       params:
         max_delegated_gateways: "7"
+        min_stake:
+          # TODO_MAINNET: Determine realistic amount for minimum application stake amount.
+          amount: "1000000" # 1 POKT
+          denom: upokt
       applicationList:
         - address: pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
           delegatee_gateway_addresses: []
