--- a/config.yml
+++ b/config.yml
@@ -225,7 +225,9 @@ genesis:
     gateway:
       params:
         # TODO_MAINNET: Determine realistic amount for minimum gateway stake amount.
-        min_stake: 100
+        min_stake:
+            amount: "1000000" # 1 POKT
+            denom: upokt
       gatewayList:
         - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
           stake:
