--- a/config.yml
+++ b/config.yml
@@ -167,7 +167,7 @@ genesis:
         max_delegated_gateways: "7"
         min_stake:
           # TODO_MAINNET: Determine realistic amount for minimum application stake amount.
-          amount: "1000000" # 1 POKT
+          amount: "100000000" # 100 POKT
           denom: upokt
       applicationList:
         - address: pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
@@ -179,7 +179,7 @@ genesis:
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
-            amount: "1000068"
+            amount: "100000068" # ~100 POKT
             denom: upokt
         - address: pokt1ad28jdap2zfanjd7hpkh984yveney6k9a42man
           delegatee_gateway_addresses: []
@@ -190,7 +190,7 @@ genesis:
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
-            amount: "1000068"
+            amount: "100000068" # ~100 POKT
             denom: upokt
     supplier:
       supplierList:
